# data-types-v0.0.0

src/: CMakeLists.txt
src/algo/: digest.cpp
src/buffer/: abstractbuffer.h  base16.cpp  base16.h  binary.h
